[gd_scene load_steps=5 format=3 uid="uid://snn0wy3tm564"]

[ext_resource type="PackedScene" uid="uid://c80wpbemqd51e" path="res://scenes/ui/main_menu/start_1or2_player.tscn" id="2"]
[ext_resource type="Script" path="res://scenes/ui/main_menu/main_menu.gd" id="4_o5fp2"]

[sub_resource type="LabelSettings" id="LabelSettings_5016b"]
font_size = 30
font_color = Color(0.360784, 0.635294, 0.862745, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="GDScript" id="2"]
script/source = "extends Label

func _on_HSlider_value_changed(value):
	text = str(value)
"

[node name="MainMenu" type="PanelContainer"]
custom_minimum_size = Vector2(320, 0)
offset_left = 120.0
offset_top = 300.0
offset_right = 440.0
offset_bottom = 380.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource("4_o5fp2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Template Game!"
label_settings = SubResource("LabelSettings_5016b")
horizontal_alignment = 1

[node name="rounds" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/rounds"]
layout_mode = 2
text = "Rounds: "

[node name="indicator" type="Label" parent="VBoxContainer/rounds"]
layout_mode = 2
text = "10"
script = SubResource("2")

[node name="HSlider" type="HSlider" parent="VBoxContainer/rounds"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 1.0
max_value = 10.0
value = 10.0
rounded = true

[node name="boost" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/boost"]
layout_mode = 2
text = "Option:"

[node name="CheckButton" type="CheckButton" parent="VBoxContainer/boost"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../../rounds/HSlider")

[node name="guns" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/guns"]
layout_mode = 2
text = "Guns: "

[node name="CheckButton" type="CheckButton" parent="VBoxContainer/guns"]
layout_mode = 2
size_flags_horizontal = 3

[node name="buttons" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="start1P" type="Button" parent="VBoxContainer/buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Start 1P"

[node name="start2P" type="Button" parent="VBoxContainer/buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Start 2P"

[node name="p1p2text" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/p1p2text"]
layout_mode = 2
size_flags_horizontal = 3
text = "Press  1 or 2 Player"
horizontal_alignment = 1

[node name="ControlPanel1or2Player" parent="." instance=ExtResource("2")]
position = Vector2(46, 178.228)

[connection signal="visibility_changed" from="VBoxContainer" to="." method="_on_VBoxContainer_visibility_changed"]
[connection signal="value_changed" from="VBoxContainer/rounds/HSlider" to="VBoxContainer/rounds/indicator" method="_on_HSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/buttons/start1P" to="." method="_on_start1P_pressed"]
[connection signal="pressed" from="VBoxContainer/buttons/start2P" to="." method="_on_start2P_pressed"]
